tests/functional/lang/eval-fail-concatLists-2.err.exp
error:
       … while calling the 'concatLists' builtin
         at /pwd/lang/eval-fail-concatLists-2.nix:1:1:
            1| builtins.concatLists [ 1 ]
             | ^
            2|

       … while evaluating a value of the list passed to builtins.concatLists

       error: expected a list but found an integer: 1
